[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
version = "0.1.0"
name = "matterdelta"
description = "Matterbridge API plugin for Delta Chat"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["deltachat", "bot", "matterbridge", "bridge"]
authors = [
  {name = "adbenitez", email = "adbenitez@hispanilandia.net"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]
dependencies = [
    "deltabot-cli",
    "requests",
]

[project.optional-dependencies]
fast = [
    "cchardet>=2.1.7",
]
dev = [
  "black",
  "mypy",
  "isort",
  "pylint",
  "pylama",
  "pytest",
  "types-requests",
]

[project.scripts]
matterdelta = "matterdelta:main"

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = "True"
